Newest at the top
YYYY-MM-DD HR:MIN - comment

2016-03-24 15:04 - Instructor element added
2016-03-24 14:52 - data type for person is created
2016-03-24 14:51 - Added the room types to schema definition
2016-03-24 14:21 - Started some data types
2016-03-24 14:07 - Initial setup